# nqboard-yolo

./: .env  .gitignore  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/com/mx/: __init__.py  __main__.py
src/com/mx/api/v1/: __init__.py  router.py
src/com/mx/api/v1/endpoints/: video_analysis.py
src/com/mx/core/: app.py  config.py
src/com/mx/db/: __init__.py  redis_client.py
src/com/mx/models/: schemas.py
src/com/mx/services/: device_manager.py  video_processor.py  yolo_detector.py
src/com/mx/utils/: http_client.py  logging.py
tests/: conftest.py
